--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,5 +7,8 @@
       "Logout": "Se deconnector"
     }
   },
-  "Logout": "Se deconnector"
+  "Logout": "Se deconnector",
+  "Login": "Se dec",
+  "en" :"English",
+  "fr": "francis"
 }
