--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -156,7 +156,7 @@
       "login": "Login",
       "sign_up_with_google": "Sign up with google",
       "sign_up_with_facebook": "Sign up with Facebook",
-      "not_a_member": "Not a meber?",
+      "not_a_member": "Not a member?",
       "already_a_member": "Already a member",
       "save": "Save",
       "cancel": "Cancel",
