drastic changes and working properly

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -47,6 +47,7 @@
     "are_you_sure_want_to_empty_your_cart": "Are You Sure Want to Empty Your Cart ?",
     "are_you_sure_want_to_clear_your_list": "Are You Sure Want to Clear Your List ?",
     "are_you_sure_want_to_logout": "Are You Sure Want to Logout ?",
+    "are_you_sure_want_to_cancel":"Are You Sure Want to Cancel ?",
     "are_you_sure": "Are You Sure ?",
     "confirm": "Confirm",
     "yes": "Yes",
