feat: 🎸 major change

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,7 @@
       "login": "Login",
       "logout": "Logout",
       "night_mode": "Night Mode",
+      "contact_us": "Contact Us",
       "your_account": "Your Account",
       "your_order": "Your Orders",
       "your_wishlist": "Your Wishlist",
@@ -41,7 +42,7 @@
     "cancel": "Cancel",
     "show": "Show",
     "hide": "Hide",
-    "changetheme" :"change theme",
+    "changetheme": "change theme",
 
     "block": "Block",
     "view": "View",
@@ -52,15 +53,65 @@
     "filter": "filter"
   },
   "confirm": {
+    "are_you_sure_want_to_remove_product": "Are You Sure Want to Remove this Product ?",
     "are_you_sure_want_to_remove_this_item": "Are You Sure Want to Remove this item ?",
     "are_you_sure_want_to_empty_your_cart": "Are You Sure Want to Empty Your Cart ?",
     "are_you_sure_want_to_clear_your_list": "Are You Sure Want to Clear Your List ?",
+    "are_you_sure_want_to_cancel_this_order": "Are You Sure Want to Cancel This Order ?",
     "are_you_sure_want_to_logout": "Are You Sure Want to Logout ?",
     "are_you_sure_want_to_cancel": "Are You Sure Want to Cancel ?",
     "are_you_sure": "Are You Sure ?",
     "confirm": "Confirm",
     "yes": "Yes",
     "no": "No"
+  },
+  "notification": {
+    "Unauthorized_Access": "Unauthorized Access !!",
+    "You_Have_Not_Admin_rights":"You Have Not Admin rights",
+    "Incorrect_Username_or_Password":"Incorrect Username or Password",
+    "Your_Account_Has_been_Blocked":"Your Account Has been Blocked",
+    "Login_Success":"Login Success",
+    "Your_Facebook_Account_has_been_found_successfully":"Your Facebook Account has been found successfully",
+    "Check_Your_Email":"Check Your Email..",
+    "An_error_occurred":"An error occurred.",
+    "Product_is_added_successfully":"Product is added successfully !",
+    "Product_Has_been_Removed":"Product Has been Removed !",
+    "Check_Your_Network":"Check Your Network !!",
+    "Try_to_reload_the_page":"Try to reload the page",
+    "Product_Has_been_Updated":"Product Has been Updated !",
+    "User_has_been_blocked":"User has been blocked",
+    "User_has_been_unblocked":"User has been unblocked",
+    "Order_Placed_Successfully":"Order Placed Successfully",
+    "Quantity_has_been_updated_to":"Quantity has been updated to",
+    "has_been_removed_from_cart":"has been removed from cart !",
+    "Cart_is_been_cleared":"Cart is been cleared",
+    "Compare_List_Is_Empty":"Compare List Is Empty",
+    "Add_one_More_item_to_compare_with":"Add one More item to compare with",
+    "It_is_already_there_in_compareList":"It is already there in compareList",
+    "Only_three_items_can_be_compared":"Only three items can be compared",
+    "There_must_be_always_two_items_to_compare":"There must be always two items to compare",
+    "Name_or_Email_you_entered_is_not_register_with_us":"Name or Email you entered is not register with us",
+    "Only_registered_users_can_get_password":"Only registered users can get password",
+    "Your_Password_Has_been_Sent_to_Your_Email":"Your Password Has been Sent to Your Email",
+    "Your_List_is_Empty":"Your List is Empty",
+    "is_added_to_the_list":"is added to the list",
+    "Items_are_deleted":"Items are deleted",
+    "Details_Are_not_changed":"Details Are not changed",
+    "Profile_Is_Updated":"Profile Is Updated",
+    "Your_Profile_Has_been_Registered_Successfully":"Your Profile Has been Registered Successfully",
+    "Item_is_Removed_From_list":"Item is Removed From list",
+    "Item_is_added_To_Cart":"Item is added To Cart",
+    "List_is_been_cleared":"List is been cleared",
+    "Only_Logged_in_users_can_add":"Only Logged in users can add",
+    "This_Item_is_already_in_list":"This Item is already in list",
+    "Item_is_added_To_Wishlist":"Item is added To Wishlist",
+    "Selected_Language_is":"Selected Language is",
+    "Theme_Changed":"Theme Changed",
+    "Review_is_added !":"Review is added !",
+    "Review_is_deleted":"Review is deleted",
+    "You_are_Not_Logged_In":"You are Not Logged In",
+    "Your_Google_Account_has_been_found_successfully":"Your Google Account has been found successfully",
+    "message_has_been_sent":"Message has been sent"
   },
   "shared": {
     "authors": {
@@ -131,6 +182,7 @@
       "is_required": "is required"
     },
     "table": {
+      "order": "ORDER",
       "no": "Number",
       "image": "Image",
       "name": "Name",
@@ -175,7 +227,27 @@
     "nightwear": "NightWear"
   },
   "user": {
+    "compare": {
+      "General": "General",
+      "Display": "Display",
+      "Design": "Design",
+      "Battery": "Battery",
+      "performance": "Performance",
+      "Storage": "Storage",
+      "Camera": "Camera"
+    },
     "form": {
+      "subject": {
+        "subject": "Subject",
+        "complaint": "complaint",
+        "feature_request": "feature request",
+        "bug_report": "bug report",
+        "feedback": "feedback"
+      },
+      "recipt": "Recipt",
+      "billed_to": "Billed To",
+      "total_amt": "Total Amount",
+      "thankyou": "Thanks for your order!",
       "username": "User Name",
       "name": "Name",
       "lastname": "Lastname",
@@ -196,16 +268,24 @@
       "securiy_code": "security code",
       "sign_in": "Sign In",
       "register": "Register",
+      "forgot_password": "Forgot Password",
+      "contact_us": "Contact Us",
+      "message": "Message",
       "login": "Login",
       "sign_up_with_google": "Sign up with google",
       "sign_up_with_facebook": "Sign up with Facebook",
       "not_a_member": "Not a member?",
       "already_a_member": "Already a member",
+      "send": "SEND",
+      "go_to_login": "Go To Login Page",
       "save": "Save",
       "cancel": "Cancel",
-      "confirm_and_continue": "Confirm And Continue"
+      "confirm_and_continue": "Confirm And Continue",
+      "Download_Recipt_As_Pdf": "Download Recipt As Pdf",
+      "Download_Recipt_As_Image": "Download Recipt As Image"
     },
     "form_validations": {
+      "invalid_input": "Invalid Input",
       "must_be_of_3_digits": "must be of 3 digits",
       "must_be_of_6_digits": "must be of 6 digits",
       "must_be_of_12_digits": "must be of 12 digits",
